--- a/app/src/main/res/layout/fragment_member_details.xml
+++ b/app/src/main/res/layout/fragment_member_details.xml
@@ -95,5 +95,42 @@
             app:layout_constraintStart_toEndOf="@+id/vote_up"
             app:layout_constraintTop_toBottomOf="@+id/vote_result" />
 
+        <EditText
+            android:id="@+id/comment_box"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="Enter your comment/reason for the vote"
+            android:inputType="textPersonName"
+            android:textSize="18sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toTopOf="@+id/send_comment"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/send_comment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lähetä kommentti"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <Button
+            android:id="@+id/read_comments"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lue kommentit"
+            app:layout_constraintBottom_toTopOf="@+id/comment_box"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vote_down" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
