--- a/app/src/main/res/layout/fragment_member_details.xml
+++ b/app/src/main/res/layout/fragment_member_details.xml
@@ -110,7 +110,8 @@
             app:layout_constraintBottom_toTopOf="@+id/send_comment"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/vote_down" />
 
         <Button
             android:id="@+id/send_comment"
@@ -127,6 +128,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Lue kommentit"
+            android:visibility="visible"
             app:layout_constraintBottom_toTopOf="@+id/comment_box"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
