--- a/app/src/main/res/layout/fragment_party_list.xml
+++ b/app/src/main/res/layout/fragment_party_list.xml
@@ -6,6 +6,5 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/party_grid"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#FFFFFF" />
+        android:layout_height="match_parent" />
 </layout>
